Pose Mode Crash #55440

Closed
opened 2018-06-11 12:47:44 +02:00 by Julien Kaspar · 5 comments
Member

Blender Version
Broken: 2.8 a67cc72232

Short description of error
Any file that is based on my recent startup file settings has the bug that whenever you try to move a bone in pose mode, Blender crashes.

bug_report.blend

Developer note: see first comment by @dfelinto below on an easier way to reproduce.

Open the file, import the collection "spring.high" from the current spring.blend file on svn and proxify spring with Ctrl + Alt + P and search for "RIG-spring". Then go into pose mode and try to move any bone and Blender should crash. But this doesn't happen with the factory settings on the latest version of Blender.
The only differences between the startup files that I can make out are a slightly different workspace layout and no default cube.

**Blender Version** Broken: 2.8 a67cc72232a **Short description of error** Any file that is based on my recent startup file settings has the bug that whenever you try to move a bone in pose mode, Blender crashes. [bug_report.blend](https://archive.blender.org/developer/F3661594/bug_report.blend) *Developer note: see first comment by @dfelinto below on an easier way to reproduce.* Open the file, import the collection "spring.high" from the current spring.blend file on svn and proxify spring with Ctrl + Alt + P and search for "RIG-spring". Then go into pose mode and try to move any bone and Blender should crash. But this doesn't happen with the factory settings on the latest version of Blender. The only differences between the startup files that I can make out are a slightly different workspace layout and no default cube.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Easier way to reproduce:
bug_report.blend

  • Add armature
  • Pose mode
  • Move bone
=================================================================                              
==9127==ERROR: AddressSanitizer: SEGV on unknown address 0x0000000002a8 (pc 0x5603b4779b8b bp 0x7ffff5c97380 sp 0x7ffff5c97360 T0)
==9127==The signal is caused by a READ memory access.                                          
==9127==Hint: address points to the zero page. 
    - 0 0x5603b4779b8a in mul_m4_v3 /home/dfelinto/src/blender/blender/source/blender/blenlib/intern/math_matrix.c:527
    - 1 0x5603b1f86488 in calculateCenterActive /home/dfelinto/src/blender/blender/source/blender/editors/transform/transform_generics.c:1959
    - 2 0x5603b1fc0daf in TargetSnapActive /home/dfelinto/src/blender/blender/source/blender/editors/transform/transform_snap.c:1073
    - 3 0x5603b1fa4167 in transform_modal /home/dfelinto/src/blender/blender/source/blender/editors/transform/transform_ops.c:404
    - 4 0x5603b1a68cc0 in wm_handler_operator_call /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:1912
    - 5 0x5603b1a6c4d2 in wm_handlers_do_intern /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:2484
    - 6 0x5603b1a6c6e8 in wm_handlers_do /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:2523
    - 7 0x5603b1a6edb0 in wm_event_do_handlers /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:2847
    - 8 0x5603b1a4c52e in WM_main /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm.c:546
    - 9 0x5603b1a41794 in main /home/dfelinto/src/blender/blender/source/creator/creator.c:516  
    - 10 0x7f8da25dd1c0 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x211c0)          
    - 11 0x5603b1a40d19 in _start (/home/dfelinto/src/blender/release/blender2.8/bin/blender+0x26b4d19)

AddressSanitizer can not provide additional info.                                              
SUMMARY: AddressSanitizer: SEGV /home/dfelinto/src/blender/blender/source/blender/blenlib/intern/math_matrix.c:527 in mul_m4_v3
Easier way to reproduce: [bug_report.blend](https://archive.blender.org/developer/F3661594/bug_report.blend) * Add armature * Pose mode * Move bone ``` ================================================================= ==9127==ERROR: AddressSanitizer: SEGV on unknown address 0x0000000002a8 (pc 0x5603b4779b8b bp 0x7ffff5c97380 sp 0x7ffff5c97360 T0) ==9127==The signal is caused by a READ memory access. ==9127==Hint: address points to the zero page. - 0 0x5603b4779b8a in mul_m4_v3 /home/dfelinto/src/blender/blender/source/blender/blenlib/intern/math_matrix.c:527 - 1 0x5603b1f86488 in calculateCenterActive /home/dfelinto/src/blender/blender/source/blender/editors/transform/transform_generics.c:1959 - 2 0x5603b1fc0daf in TargetSnapActive /home/dfelinto/src/blender/blender/source/blender/editors/transform/transform_snap.c:1073 - 3 0x5603b1fa4167 in transform_modal /home/dfelinto/src/blender/blender/source/blender/editors/transform/transform_ops.c:404 - 4 0x5603b1a68cc0 in wm_handler_operator_call /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:1912 - 5 0x5603b1a6c4d2 in wm_handlers_do_intern /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:2484 - 6 0x5603b1a6c6e8 in wm_handlers_do /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:2523 - 7 0x5603b1a6edb0 in wm_event_do_handlers /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:2847 - 8 0x5603b1a4c52e in WM_main /home/dfelinto/src/blender/blender/source/blender/windowmanager/intern/wm.c:546 - 9 0x5603b1a41794 in main /home/dfelinto/src/blender/blender/source/creator/creator.c:516 - 10 0x7f8da25dd1c0 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x211c0) - 11 0x5603b1a40d19 in _start (/home/dfelinto/src/blender/release/blender2.8/bin/blender+0x26b4d19) AddressSanitizer can not provide additional info. SUMMARY: AddressSanitizer: SEGV /home/dfelinto/src/blender/blender/source/blender/blenlib/intern/math_matrix.c:527 in mul_m4_v3 ```
Campbell Barton was assigned by Dalai Felinto 2018-06-11 15:21:41 +02:00

This issue was referenced by 9b39a5142f

This issue was referenced by 9b39a5142f974ed1bc63da298732259394794423

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55440
No description provided.