Fix T55440: Pose Mode Crash